2007-01-25  Sergio Villar Senin <svillar@igalia.com>

	* Fixed a comparison in an if statement

2007-01-25 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Added TNY_FOLDER_TYPE_ARCHIVE and TNY_FOLDER_TYPE_NUM

2007-01-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added a CamelStreamGZip which might someday be used to support the
	COMPRESS capability of some LEMONADE-enabled IMAP servers. This new
	type is experimental and not sufficiently tested for real use.

2007-01-24  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c: added a missing unlock

2007-01-23  Philip Van Hoof <pvanhoof@gnome.org>

	* Several locking fixes when retrieving summary info
	* Performance improvements in camel-imap-folder.c
	* Bandwidth improvements for the IMAP provider

2007-01-22  Philip Van Hoof <pvanhoof@gnome.org>

	* Preperation for notification of changes in folders, mostly bugfixes
	* More camel-folder-summary.c memory corruption bugfixes 
	* Added for-now unstable camel-lite API: camel_store_get_recent_messages
	Do not yet use this API, unless you want to screwup your IMAP
	connection significantly enough to make using tinymail impossible.
	* Several bugfixes in CamelImapFolder
	* Invalid UTF-8 in TnyGtkTextBufferStream solution
	* Removed an unneeded hashtable from CamelFolderSummary, reducing
	memory consumption
	* Performance improvements

2007-01-21  Philip Van Hoof <pvanhoof@gnome.org>

	* Preperation for notification of changes in folders, mostly bugfixes
	* Important bugfix for camel-folder-summary.c when creating new
	CamelMessageInfo instances without having a summary instance (the size
	was too small)
	* Compile with -DIM_TESTING in the CFLAGS to see the TnyFolderMonitor
	in action already

2007-01-19  Philip Van Hoof <pvanhoof@gnome.org>

	* Preparations for notification of changes in folders

2007-01-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Introduction of TnyFolderChange, TnyFolderObserver, TnyFolderMonitor