@@ -37,7 +37,7 @@ enum _TnyErrorDomain
 
 enum _TnyError 
 {
-	TNY_FOLDER_ERROR_EXPUNGE,
+	TNY_FOLDER_ERROR_SYNC,
 	TNY_FOLDER_ERROR_REMOVE_MSG,
 	TNY_FOLDER_ERROR_ADD_MSG,
 	TNY_FOLDER_ERROR_REFRESH,
