@@ -317,7 +317,7 @@ on_header_view_key_press_event (GtkTreeView *header_view, GdkEventKey *event, gp
 					tny_list_remove (TNY_LIST (mymodel), G_OBJECT (header));
 					folder = tny_header_get_folder (header);
 					tny_folder_remove_msg (folder, header, NULL);
-					tny_folder_expunge (folder, NULL);
+					tny_folder_sync (folder, TRUE, NULL);
 					g_object_unref (G_OBJECT (folder));
 				}
 
